--- a/exec/ex022/fundo006.html
+++ b/exec/ex022/fundo006.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <style>
     body{
+        
         height: 100vh;
+        /*
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
-        background-position: center top;
+        background-position: center center;
         background-repeat: repeat-y;
         background-size: cover;
+        background-attachment: fixed;
+        */
+
+        /*Shorthand - background
+          color > image > position > repeat > [size] > attachment
+        */
+
+        background: black url('imagens/fiora-espada-alada.png') center center no-repeat fixed;
+
+        background-size: cover;
+    
     }
 
     main{
-        background-color: white;
+        background-color: blanchedalmond;
         width: 400px;
         padding: 10px;
         margin: auto;
