--- a/Desafios/Desafio012/index.html
+++ b/Desafios/Desafio012/index.html
@@ -28,7 +28,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -66,7 +66,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -80,7 +80,7 @@
 
 
 
-    <section class="imagem">
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
